# AwesomBoard

./: .npmrc  package-lock.json  package.json
.github/workflows/: ci-cd.yml
backend/: auth.ml  chat.ml  configRoom.ml  configRoomEndpoint.ml  cors.ml  domain.ml  dune  dune-project  elo.ml  everyboard.opam  game.ml  gameEndpoint.ml  main.ml  server.ml  serverUtils.ml  utils.ml  webSocketMessage.ml  webSocketServer.ml
backend/firestore/: auth.ml  dune  firestoreOps.ml  firestorePrimitives.ml  googleCertificates.ml  jwt.ml  stats.ml  tokenRefresher.ml
backend/models/: configRoom.ml  currentGame.ml  dune  elo.ml  game.ml  gameEvent.ml  message.ml  minimalUser.ml  models.ml  player.ml  role.ml  user.ml
backend/persistence/: chat.ml  configRoom.ml  dune  elo.ml  game.ml  helpers.ml
backend/sql/: chat-only.sql  init.sql
backend/tests/: dune  tests.ml  tokenRefresherTests.ml
backend/utils/: JSON.ml  caqti.ml  crypto.ml  dreamUtils.ml  dune  errors.ml  external.ml  gameId.ml  id.ml  utils.ml
backend/webSocket/: dune  subscriptionManager.ml  webSocketMessage.ml  webSocketServer.ml
coverage/: functions.csv  lines.csv
lib/: package-lock.json
lib/src/: ArrayUtils.ts  JSON.ts  MGPMap.ts  MGPOptional.ts  Sets.ts
lib/src/tests/: ArrayUtils.spec.ts  Combinatorics.spec.ts  Comparable.spec.ts  Encoder.spec.ts  JSON.spec.ts  MGPFallible.spec.ts  MGPMap.spec.ts  MGPOptional.spec.ts  MGPUniqueList.spec.ts  (+4 more)
src/: index.html
src/app/: app.component.spec.ts  app.module.spec.ts  app.module.ts
src/assets/: fr.json
translations/: messages.fr.xlf  messages.xlf
(+472 files in other folders)
