(library
 (name everyboard)
 (libraries
   everyboard.utils everyboard.firestore everyboard.models everyboard.persistence everyboard.websocket
   dream yojson ppx_deriving_yojson.runtime mirage-crypto-pk x509 cohttp cohttp-lwt-unix caqti-lwt caqti-driver-sqlite3 sqids)
 (modules Server ServerUtils Options Cors)
 (instrumentation (backend bisect_ppx))
 (preprocess (pps lwt_ppx ppx_deriving_yojson ppx_deriving.show)))

(executable
 (name main)
 (modules Main)
 ;; (flags (:standard -cclib -static -cclib -no-pie))
 (libraries everyboard dream))
